--- a/style.css
+++ b/style.css
@@ -1,14 +1,27 @@
-h1 {color: rgb(65, 5, 143);
-text-transform: lowercase;
-font-size: 30px;
-line-height: 2em;}
-h2 {color: rgb(13, 111, 31);
-text-transform: lowercase;
-font-size: 30px;
-line-height: 3em;}
-p {color: rgb(204, 8, 8);
-text-align: justify;}
-a {color: pink;
-text-decoration: none;
-font-weight: bold;
-font-size: 50px;}
+h1 {
+  color: rgb(65, 5, 143);
+  text-transform: lowercase;
+  font-size: 30px;
+  line-height: 2em;
+}
+h2 {
+  color: rgb(13, 111, 31);
+  text-transform: lowercase;
+  font-size: 30px;
+  line-height: 3em;
+}
+p {
+  color: rgb(204, 8, 8);
+  text-align: justify;
+}
+a {
+  color: pink;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 50px;
+}
+.image {
+  width: 100px;
+  border: 3px solid goldenrod;
+  box-sizing: border-box;
+}
