--- a/style.css
+++ b/style.css
@@ -1,17 +1,7 @@
 table {
-  border: 2px solid rebeccapurple;
-  border-collapse: collapse;
+    border: 2px solid red;
+    border-collapse: collapse;
 }
-td,
-th {
-  border: 1px solid rebeccapurple;
-}
-caption {
-    color: rgb(3, 73, 73);
-    font-weight: bold;
-    font-size: 10;
-    font-family: cursive;
-}
-.text-center {
-    text-align: center;
+td, th {
+    border: 1px solid red
 }
