--- a/style.css
+++ b/style.css
@@ -1,24 +1,8 @@
-div {
-  width: 100px;
-  height: 100px;
-  border: 2px solid black;
+.paragraph {
+  /* position: relative; */
+  /* відносне позиціонування */
+  /* margin-left: 50px; */
+  position: relative;
+  left: 50px;
+  top: 50px;
 }
-div:nth-child(odd) {
-  background-color: red;
-}
-div:nth-child(even) {
-  background-color:  green;
-}
-div:nth-child(3n) {
- background-color:  blue;
-}
-
-/* зробити такий коліртла ля квадратів
-1- червоний
-2- зелений
-3- синій
-4- зелений
-5-червоний
-6- синій
-7- червоний
-8-зелений */
