--- a/style.css
+++ b/style.css
@@ -1,62 +1,8 @@
-.nav-list {
-  margin: 0;
-  padding: 0;
-  font-size: 0;
+p {
+    color: rgb(235, 6, 197);
 }
-.list-item {
-  position: relative;
-  display: inline-block;
-  padding: 20px;
-  background-color: rgb(235, 157, 129);
-}
-.link {
-  color: aliceblue;
-  text-decoration: none;
-  font-size: 20px;
-}
-.sab-nav-list {
-  position: absolute;
-  top: 63px;
-  left: -35px;
-  display: block;
-  width: 150px;
-}
-.sab-list-item {
-  background-color: rgb(235, 157, 129);
-  padding: 20px;
-  display: none;
-}
-.list-item:hover .sab-list-item {
-  display: block;
-}
-.sab-sab-nav-list {
-  position: absolute;
-  width: 150px;
-  top: 129px;
-  left: 150px;
-}
-.sab-sab-list-item {
-  display: none;
-  padding: 20px;
-  background-color: rgb(235, 157, 129);
-}
-.sab-list-item:hover .sab-sab-list-item {
-  display: block;
-}
-.sab-sab-sab-nav-list {
-  position: absolute;
-  width: 150px;
-  top: 129px;
-  left: 150px;
-}
-.sab-sab-sab-list-item {
-  display: none;
-  padding: 20px;
-  background-color: rgb(235, 157, 129);
-}
-.sab-sab-list-item:hover .sab-sab-sab-list-item {
-  display: block;
-}
-.sab-list-item:hover, .sab-sab-list-item:hover, .sab-sab-sab-list-item:hover {
-    background-color: rgb(106, 72, 60);
+p::first-letter {
+    font-size: 20px;
+    color: blueviolet;
+    font-style: italic;
 }
