--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 p {
     color: rgb(235, 6, 197);
 }
-p::first-letter {
-    font-size: 20px;
-    color: blueviolet;
-    font-style: italic;
+p::first-line { background-color: aquamarine;
+
 }
