--- a/style.css
+++ b/style.css
@@ -1,34 +1,23 @@
-p {
-  position: relative;
-  color: rgb(235, 6, 197);
-  font-size: 20px;
-  border: 1px solid rgb(251, 101, 0);
+/* 
+* множинний селектор
+ */
+div * {
+
 }
-p::before {
-  position: absolute;
-  top: 5px;
-  left: 10px;
-  color: brown;
-  background-color: bisque;
-  width: 20px;
-  height: 20px;
-  content: "A";
-  text-align: center;
-  display: inline-block;
-  border-radius: 50%;
-  opacity: 0,5;
-}
-p::after {
-    position: absolute;
-    bottom: 5px;
-    right: 10px;
-  color: brown;
-  background-color: bisque;
-  width: 20px;
-  height: 20px;
-  content: "A";
-  display: inline-block;
-  text-align: center;
-  border-radius: 50%;
-  opacity: 0,5;
-}
+/*
+* універсальний селектор
+ */
+ * {
+    /* ці стилі будуть застосовані до всіх елементів */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+ }
+
+ /*
+Проблема - різні базові тсілі які можуть видавати браузери
+1 рішення - універсальний селектор з базовими правилами
+2 рішення - reset.css ( максимально обнулює всі браузерні стилі)
+3 рішення - normalize.css (приводить всі стилі для всіх браузерів до чогось спільного)
+
+  */
