--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-/* 
-* множинний селектор
- */
-div * {
 
-}
-/*
-* універсальний селектор
- */
  * {
     /* ці стилі будуть застосовані до всіх елементів */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
  }
+.container { 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    border: 1px, solid, rgb(255, 0, 0);
 
- /*
-Проблема - різні базові тсілі які можуть видавати браузери
-1 рішення - універсальний селектор з базовими правилами
-2 рішення - reset.css ( максимально обнулює всі браузерні стилі)
-3 рішення - normalize.css (приводить всі стилі для всіх браузерів до чогось спільного)
-
-  */
+}
+.item {
+    width: 50px;
+    height: 50px;
+    background-color:rgb(249, 57, 217) ;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    border: 2px solid rgb(119, 0, 42);
+}
+ 
