--- a/style.css
+++ b/style.css
@@ -7,14 +7,16 @@
  }
 .container { 
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items:flex-end;
     border: 1px, solid, rgb(255, 0, 0);
+    height: 150px;
 
 }
 .item {
     width: 50px;
-    height: 50px;
+    /* height: 50px; */
     background-color:rgb(249, 57, 217) ;
     color: rgb(255, 255, 255);
     text-align: center;
