--- a/style.css
+++ b/style.css
@@ -1,26 +1,45 @@
+* {
+  box-sizing: border-box;
+}
+.card-container {
+  width: 35vw;
+  height: 60vh;
+  border: 2px solid black;
+}
 
- * {
-    /* ці стилі будуть застосовані до всіх елементів */
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
- }
-.container { 
+.header {
+  height: 50%;
+  width: 100%;
+  background-size: cover;
+  background-image: url("./pictures/what-is-a-cats-lifespan-lakeland-fl-scaled.jpg")
+  
+}
+.card {
+   
+    font-size: 16px;
+    font-weight: 600;
+    display: flex;
+    height: 50%;
+   
+    flex-direction: column;
+justify-content: space-between;
+align-items: center;
+
+}
+.user-img {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-top: -20%;
+}
+
+
+.links {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items:flex-start;
-    flex-wrap: wrap-reverse;
-    border: 1px, solid, rgb(255, 0, 0);
-    /* height: 150px; */
+    width: 80%;
+    justify-content: space-around;
+    margin-bottom: 15px;
 
 }
-.item {
-    width: 50px;
-    /* height: 50px; */
-    background-color:rgb(249, 57, 217) ;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    border: 2px solid rgb(119, 0, 42);
-}
- 
