--- a/style.css
+++ b/style.css
@@ -1,45 +1,5 @@
-* {
-  box-sizing: border-box;
-}
-.card-container {
-  width: 35vw;
-  height: 60vh;
-  border: 2px solid black;
-}
-
-.header {
-  height: 50%;
-  width: 100%;
-  background-size: cover;
-  background-image: url("./pictures/what-is-a-cats-lifespan-lakeland-fl-scaled.jpg")
-  
-}
-.card {
-   
-    font-size: 16px;
-    font-weight: 600;
+.form {
     display: flex;
-    height: 50%;
-   
     flex-direction: column;
-justify-content: space-between;
-align-items: center;
-
-}
-.user-img {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-top: -20%;
-}
-
-
-.links {
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    justify-content: space-around;
-    margin-bottom: 15px;
-
+    max-width: 200px;
 }
