--- a/style.css
+++ b/style.css
@@ -9,17 +9,21 @@ form {
   color: red;
 }
 fieldset {
-    display: flex;
-    flex-direction: column;
-    margin: 5px;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
 }
 legend {
-    background-color: #000;
-    color: #fff;
-    padding: 3px 6px;
-   
-  }
-  
-  input {
-    margin: 0.4rem;
-  }
+  background-color: #000;
+  color: #fff;
+  padding: 3px 6px;
+}
+
+input {
+  margin: 0.4rem;
+}
+textarea {
+  resize: none;
+  height: 150px;
+  width: 100px;
+}
