--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Script&family=Nanum+Myeongjo&family=Quicksand:wght@300..700&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
+@import url("./style-test.css");
 body {
   font-family: "Shantell Sans", cursive;
 }
