--- a/style.css
+++ b/style.css
@@ -1,60 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=League+Script&family=Nanum+Myeongjo&family=Quicksand:wght@300..700&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap");
-
-@import url("./style-test.css");
-body {
-  font-family: "Shantell Sans", cursive;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root {
+  font-size: 16px;
+}
+ul {
+  font-size: 24px;
+}
+li {
+  display: inline-block;
+  background-color: rgb(91, 41, 41);
+  padding: 10px;
+  font-size: 2rem;
 }
 
-h1 {
-  text-align: center;
-  margin-bottom: 10px;
-}
-form {
-  display: flex;
-  flex-direction: column;
-  max-width: 400px;
-  margin: 0 auto;
- 
-fieldset {
-  margin-bottom: 20px;
-}
-legend {
-    background-color: black;
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  padding: 3px 12px;
-  margin-bottom: 10px;
-}
-label {
-  display: flex;
-  margin-bottom: 10px;
-  margin-left: 5px;
-}
-input {
-  margin-left: 10px;
-}
-select,
-textarea {
-  width: 90%;
-  margin-bottom: 10px;
-}
-textarea {
-  resize: none;
-  height: 60px;
-}
-button {
-  padding: 10px 20px;
-  background-color: rgb(91, 179, 3);
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-bottom: 15px;
-}
-button:hover {
-    background-color: rgb(100, 161, 39);
-}
-.center { display: flex;
-    justify-content: center;
-
-}
